# bci-gpt-inverse-sim

./: .dockerignore  .pre-commit-config.yaml  AUTONOMOUS_EXECUTION_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_FINAL_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.production  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_REPORT.md  PROJECT_CHARTER.md  README.md  RESEARCH_OPPORTUNITIES.md  RESEARCH_ROADMAP_AUTONOMOUS.md  SYSTEM_STATUS.md  TERRAGON_AUTONOMOUS_SDLC_FINAL_EXECUTION_REPORT.md  advanced_autonomous_system_validator.py  autonomous_basic_validator.py  autonomous_quality_runner.py  autonomous_sdlc_final_results.json  comprehensive_documentation_generator.py  comprehensive_quality_gates.py  comprehensive_quality_gates_validator.py  comprehensive_test_runner.py  deploy.sh  deployment_readiness_check.py  docker-compose.prod.yml  docker-compose.yml  enhanced_autonomous_runner.py  enhanced_bci_validation_20250824_193959.json  enhanced_robust_sdlc_runner.py  final_system_validation.py  generation_1_validation_20250827_131848.json  generation_2_robustness_enhancer.py  generation_2_robustness_validation_20250824_194949.json  generation_2_robustness_validation_20250827_132258.json  (+41 more)
backup/: backup.sh  disaster_recovery_plan.md
bci_gpt/: __init__.py  cli.py  cli_lightweight.py
deployment/: DEPLOYMENT.md  Dockerfile  docker-compose.prod.yml
docker/: Dockerfile
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  INDEX.md  ROADMAP.md  TUTORIAL.md  USER_GUIDE.md
k8s/: deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
kubernetes/: deployment.yaml  hpa.yaml  pvc.yaml  rbac.yaml
monitoring/: alert_rules.yml  alerts.yml  dashboard.json  prometheus.yml
quality_reports/: autonomous_quality_report.json  autonomous_sdlc_final_report.json  autonomous_sdlc_results.json  comprehensive_test_results.json  deployment_summary.json  documentation_report.json  documentation_summary.json  enhanced_autonomous_report.json  optimized_sdlc_results.json  production_deployment_config.json  progressive_quality_results.json  quality_gate_report.txt  quality_gate_results.json  robust_execution_summary.json  robust_sdlc_results.json  (+4 more)
(+154 files in other folders)
